# Sputify

./: Account.cpp  Account.h  Artist.cpp  Artist.h  CMakeLists.txt  Commandler.cpp  Commandler.h  Duration.cpp  Duration.h  IdGenerator.cpp  IdGenerator.h  Manual.h  Playlist.cpp  Playlist.h  Song.cpp  Song.h  SputifyCore.cpp  SputifyCore.h  User.cpp  User.h  main.cpp
